--- a/app/globals.css
+++ b/app/globals.css
@@ -1,32 +1,80 @@
 @import "tailwindcss";
 
 :root {
-  --background: #1c1c1c;
-  --foreground: #ffffff;
+    --background: #1c1c1c;
+    --foreground: #ffffff;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: "Inter", sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: "Inter", sans-serif;
 }
 
 /* Force any Tailwind transition class to use a specific easing */
 [class*="transition"] {
-  transition-timing-function: cubic-bezier(0, 1, 0, 1) !important;
+    transition-timing-function: cubic-bezier(0, 1, 0, 1) !important;
 }
 
 /* Hide scrollbar but allow scrolling */
 .hide-scrollbar {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
 
 .hide-scrollbar::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+    display: none; /* Safari and Chrome */
+}
+
+@keyframes flash-green-anim {
+    0% {
+        background-color: transparent;
+    }
+    2% {
+        background-color: rgba(34, 197, 59, 0.3);
+    }
+    100% {
+        background-color: transparent;
+    }
+}
+
+@keyframes flash-red-anim {
+    0% {
+        background-color: transparent;
+    }
+    2% {
+        background-color: rgba(197, 34, 34, 0.3);
+    }
+    100% {
+        background-color: transparent;
+    }
+}
+
+.flash-green {
+    animation: flash-green-anim 2s ease-out 1 forwards;
+}
+
+.flash-red {
+    animation: flash-red-anim 2s ease-out 1 forwards;
+}
+
+@keyframes message-anim {
+  0% {
+    transform: translateY(20px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+}
+
+
+.message {
+  animation: message-anim 1s ease-out forwards;
 }
